...
        </LinearLayout>

    </LinearLayout>

    <!-- CHAT LIST -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="12dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
...
